# table-converter

./: MANIFEST.in  README.md  pyproject.toml  run.sh
.github/workflows/: codeql.yml
src/table_converter/: main.py
src/table_converter/config/: logging.yaml
src/table_converter/factory/: bank_factory.py
src/table_converter/processors/: bank_processors.py  base.py
src/table_converter/utils/: __init__.py  utils.py
